Added troubleshooting section to Readme